2000-11-26  Martin Baulig  <martin@home-of-linux.org>

	* gnome-x-checks.m4 (GNOME2_X_CHECKS): Use
	GNOME_PKGCONFIG_CHECK_MODULES.

	* gnome-pkgconfig.m4 (GNOME_PKGCONFIG_CHECK_VERSION): Don't
	AC_REQUIRE([GNOME_REQUIRE_PKGCONFIG]).
	(GNOME_CHECK_PKGCONFIG): Check for pkg-config >= 0.4.1.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pkgconfig.m4: Added GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES
	to check for a list of optional modules.

	* gnome-platform.m4: Require GNOME_REQUIRE_PKGCONFIG.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-platform.m4: New file. This defines
	GNOME_PLATFORM_GNOME_2.

	* gnome-pkgconfig.m4: Disable the --extra-flags argument to
	pkg-config, this doesn't exist anymore.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pkgconfig.m4: New file. This defines
	GNOME_CHECK_PKGCONFIG, GNOME_REQUIRE_PKGCONFIG and
	GNOME_PKGCONFIG_* macros from pkg-config.

2000-11-21  Martin Baulig  <baulig@suse.de>

	* gnome-support.m4, need-declaration.m4: Removed.

2000-09-30  Martin Baulig  <baulig@suse.de>

	* gnome-x-checks.m4: Switch to pkg-config to check for GTK+ 2.0;
	Removed all `gnome_cv_passdown_x_*' variables and `USE_DEVGTK'.

	* gnome-common.m4 (GNOME_COMMON_INIT): Added the always-false
	INSIDE_GNOME_COMMON automake conditional.
	(GNOME_GTKDOC_CHECK): New macro.
	(GNOME_DEBUG_CHECK): New macro.

Thu Aug 24 02:28:57 2000  George Lebl <jirka@5z.com>

	* gnome-x-checks.m4: use the correct name in AC_PROVIDE

2000-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-x-checks.m4 (GNOME_X_CHECKS): Renamed
	to GNOME2_X_CHECKS.

2000-07-24  Martin Baulig  <martin@home-of-linux.org>

	* autogen.sh: Removed some old crap in it.
	* aclocal-include.m4: Removed.

	* gnome-x-checks.m4: Check for GTK+ 2.0.

2000-07-24  Martin Baulig  <baulig@suse.de>

	* autogen.sh: Make it work with AM_GNOME2_GETTEXT.
	* check-utmp.m4: New file.

2000-07-24  Martin Baulig  <baulig@suse.de>

	Synced with gnome-libs/gnome-data.
