@@ -2,9 +2,8 @@
 
 GNOME2_MACROS=					\
 	compiler-flags.m4 gnome-common.m4 gnome-cxx-check.m4 \
-	gnome-fileutils.m4 gnome-gettext.m4 gnome-gnorba-check.m4 \
-	gnome-pthread-check.m4 gnome-x-checks.m4 gnome.m4 linger.m4 \
-	check-utmp.m4 gnome-pkgconfig.m4 gnome-platform.m4
+	gnome-gettext.m4 gnome-pthread-check.m4 gnome-x-checks.m4 \
+	linger.m4 check-utmp.m4 gnome-pkgconfig.m4 gnome-platform.m4
 
 EXTRA_DIST=$(GNOME2_MACROS) autogen.sh
 MAINTAINERCLEANFILES=macros2.dep
