@@ -1,3 +1,7 @@
+2000-11-29  Martin Baulig  <baulig@suse.de>
+
+	* gnome.m4, gnome-gnorba-check.m4, gnome-fileutils.m4: Removed.
+
 2000-11-26  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-x-checks.m4 (GNOME2_X_CHECKS): Use
